tuya ui and sdk test