@@ -32,6 +32,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << '--add-opens=java.base/java.io=ALL-UNNAMED'
+    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -63,12 +66,17 @@ android {
 
 configurations.all {
     exclude group: "com.thingclips.smart" ,module: 'thingsmart-modularCampAnno'
+    resolutionStrategy {
+        force 'com.tuya.smart:tuyasmart-geofence:4.0.0'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation 'com.alibaba:fastjson:1.1.67.android'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.9'
+    implementation 'com.tuya.smart:tuyasmart:4.0.0'
+    implementation 'com.tuya.smart:tuyasmart-mqtt:3.17.0'
 
     // The latest stable App SDK for Android.
 //    implementation 'com.facebook.soloader:soloader:0.10.4+'
